--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide": "^0.534.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.4",
@@ -55,6 +56,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.20",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-color": "^3.0.13",
